# EdgeViewer

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  processor.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt  NativeLib.kt
app/src/main/java/com/example/edgeviewer/gl/: EdgeGLSurfaceView.kt  EdgeRenderer.kt  MainActivity.kt  NativeLib.kt  YuvUtils.kt
app/src/main/java/gl/: EdgeGLSurfaceView.kt  EdgeRenderer.kt  MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
web/: package-lock.json  package.json  tsconfig.json
web/public/: index.html  viewer.js
web/src/: viewer.ts
